--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         * SITE_NAME：站点名称
         */
         window.GLOBAL_CONFIG = {
-            SCF_GATEWAY: "https://hod.oao.workers.dev/",
+            SCF_GATEWAY: "https://hod1.oao.workers.dev/",
             SITE_NAME: "杂乱的我",
             IS_CF: true
         };
